solved labels overlapping problem

--- a/reg.css
+++ b/reg.css
@@ -44,7 +44,7 @@ h3{
     text-align: center;
     color: orangered;
     margin-top: 2%;
-    margin-bottom: -3%;
+    margin-bottom: 1%;
     font-family: Raleway;
 }
 
